infra/semaphoreui/semaphoreui-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: semaphoreui
  labels:
    app.kubernetes.io/name: semaphoreui
    app.kubernetes.io/managed-by: flux
