infra/semaphoreui/semaphoreui-postgres-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: semaphoreui-postgres
  namespace: semaphoreui
spec:
  serviceName: semaphoreui-postgres
  replicas: 1
  selector:
    matchLabels:
      app: semaphoreui-postgres
  template:
    metadata:
      labels:
        app: semaphoreui-postgres
    spec:
      nodeSelector:
        node.longhorn.io/create-default-disk: "true"
      containers:
        - name: postgres
          image: postgres:18.3-alpine3.23
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
              subPath: pgdata
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 500m
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: semaphoreui-postgres-pvc
